# AILinguist

./: README.md  evaluate.py  exp.sh  exp_conv.sh  grammar.py  igt.py  ocr.py  pdf_to_image.py  pyproject.toml  retriever.py  summarizer.py  translator.py
results/: dev100_baseline.csv  dev100_baseline_stats.txt  dev100_conv_baseline.csv  dev100_conv_baseline_stats.txt  dev100_conv_dict.csv  dev100_conv_dict_grammar.csv  dev100_conv_dict_grammar_stats.txt  dev100_conv_dict_stats.txt  dev100_conv_grammar.csv  dev100_conv_grammar_stats.txt  dev100_conv_igt.csv  dev100_conv_igt_dict.csv  dev100_conv_igt_dict_grammar.csv  dev100_conv_igt_dict_grammar_stats.txt  dev100_conv_igt_dict_stats.txt  dev100_conv_igt_grammar.csv  dev100_conv_igt_grammar_stats.txt  dev100_conv_igt_stats.txt  dev100_dict.csv  dev100_dict_grammar.csv  dev100_dict_grammar_stats.txt  dev100_dict_stats.txt  dev100_grammar.csv  dev100_grammar_stats.txt  dev100_igt.csv  dev100_igt_dict.csv  dev100_igt_dict_stats.txt  dev100_igt_grammar.csv  dev100_igt_grammar_stats.txt  dev100_igt_stats.txt  dev100_results.csv
